<resources>
    <string name="app_name">InnerTraveler</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="enable_dark_theme">Enable Dark Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="prefs_theme_key">theme</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="forgot_password_text">An email will be sent to assist you in creating a new
        password for your account</string>
    <string name="forgot_password_button">Send Password Reset</string>
    <string name="or">OR</string>
    <string name="facebook_login_button">Login with Facebook</string>
    <string name="hint_post_title">Post title</string>
    <string name="hint_post_description">Post description</string>
    <string name="action_add_post">Add Post</string>
    <string name="action_post">Post</string>
    <string name="action_delete">Delete</string>
    <string name="action_log_out">Log out</string>
    <string name="action_settings">Settings</string>
    <string name="posted_by">Posted by</string>
    <string name="post_title">Post title</string>
    <string name="post_description">Post Description</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="google_maps_key">AIzaSyA3wtJlQ5IK5HesOCnqzTJVJk_s2WxdeOw</string>
    <string name="date">Date</string>
    <string name="member">Member</string>
    <string name="posts">Posts</string>
    <string name="zero">0</string>
</resources>
