<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_margin="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:id="@+id/post_image" />

        <TextView
            android:id="@+id/tv_post_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="17sp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:text="@string/post_title"/>

        <TextView
            android:id="@+id/post_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/posted_by"
            android:textSize="15sp"
            android:fontFamily="serif"
            android:textStyle="bold"
            android:textColor="@color/primaryColorDark_light"/>

        <TextView
            android:id="@+id/tv_post_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_margin="5dp"
            android:text="@string/post_description"/>

    </LinearLayout>
</android.support.v7.widget.CardView>